--- a/public/global.css
+++ b/public/global.css
@@ -48,16 +48,21 @@ button {
 	color: #333;
 	background-color: #f4f4f4;
 	outline: none;
+	cursor: pointer;
+	transition: all 0.25s ease-out;
+}
+
+.danger-btn {
+	color: white;
+	background: #e74c3c;
+	position: relative;
+	box-shadow: 3px 3px  #c0392b, 2px 2px  #c0392b, 1px 1px  #c0392b;
+    border: 1px solid  #c0392b;
+}
+.danger-btn:hover {
+	transform: translate3d(0, 1px, 0);
 }
 
 button:disabled {
 	color: #999;
-}
-
-button:not(:disabled):active {
-	background-color: #ddd;
-}
-
-button:focus {
-	border-color: #666;
 }
